--- a/apps/grouptable2/config.json
+++ b/apps/grouptable2/config.json
@@ -2,7 +2,7 @@ config({
   classname   : 'tau.demo.GroupTable2Controller',
   require     : $APPPATH + '/grouptable2/main.js', 
   icon        : $APPPATH + '/grouptable2/icon.png',
-  title       : 'Group Table',
+  title       : 'gTable2',
   desc        : '그룹 테이블 예제2',
   version     : '1.0.0',
   vendor      : 'KT Corporation'
