--- a/apps/hcarousel/config.json
+++ b/apps/hcarousel/config.json
@@ -2,7 +2,7 @@ config({
   classname   : 'tau.demo.HCarouselController',
   require     : $APPPATH + '/hcarousel/main.js', 
   icon        : $APPPATH + '/hcarousel/icon.png',
-  title       : 'horizontal Carousel',
+  title       : 'hCarousel',
   desc        : '수평방향 스크롤이 있는 Carousel 예제',
   version     : '1.0.0',
   vendor      : 'KT Corporation'
