--- a/apps/tbuttons/config.json
+++ b/apps/tbuttons/config.json
@@ -2,7 +2,7 @@ config({
   classname   : 'tau.demo.TypeButtonsController',
   require     : '/main.js', 
   icon        : '/icon.png',
-  title       : 'tButtons2',
+  title       : 'tButtons',
   desc        : '타입 테마를 적용한 버튼 예제',
   version     : '1.0.0',
   vendor      : 'KT Corporation'
