--- a/apps/tbuttons2/config.json
+++ b/apps/tbuttons2/config.json
@@ -1,8 +1,8 @@
 config({
-  classname   : 'tau.demo.ShapeButtonsController',
+  classname   : 'tau.demo.TypeButtons2Controller',
   require     : '/main.js', 
   icon        : '/icon.png',
-  title       : 'tButtons',
+  title       : 'tButtons2',
   desc        : '타입 테마를 적용한 버튼 예제',
   version     : '1.0.0',
   vendor      : 'KT Corporation'
