--- a/apps/evtbubble/config.json
+++ b/apps/evtbubble/config.json
@@ -2,7 +2,7 @@ config({
   classname   : 'sample.BubbleController',
   require     : $APPPATH + '/evtbubble/main.js', 
   icon        : $APPPATH + '/evtbubble/icon.png',
-  desc		  : '이벤트 버블링 예제'
+  desc		  : '이벤트 버블링 예제',
   title       : 'EventBubble',
   version     : '1.0.0',
   vendor      : 'KT Corp',
